compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__string_literals_redundant_comparison.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { \"wibble\" == \"wobble\" }"
---
----- SOURCE CODE
pub fn main() { "wibble" == "wobble" }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { "wibble" == "wobble" }
  │                 ^^^^^^^^^^^^^^^^^^^^ This is always `False`

This comparison is redundant since it always fails.
