compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__todo_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { 1 == todo }"
---
----- SOURCE CODE
pub fn main() { 1 == todo }

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.gleam:1:22
  │
1 │ pub fn main() { 1 == todo }
  │                      ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
Hint: I think its type is `Int`.
